logs/error.log
2021-02-01T12:49:34.335Z [logs] error: uncaughtException: missing ) after argument list
D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js:37
    mongoose.connection.once('open', () => logger.info("Successfully connected to the database"););
                                                                                               ^

SyntaxError: missing ) after argument list
    at Module._compile (internal/modules/cjs/loader.js:872:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js:8:5)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\routes\route.js:1:34)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
2021-02-01T12:49:48.363Z [logs] error: uncaughtException: missing ) after argument list
D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js:38
    mongoose.connection.once('open', () => logger.info("Successfully connected to the database"););
                                                                                               ^

SyntaxError: missing ) after argument list
    at Module._compile (internal/modules/cjs/loader.js:872:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js:8:5)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\routes\route.js:1:34)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
2021-02-01T12:50:03.922Z [logs] error: uncaughtException: Cannot find module './config/logger'
Require stack:
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\routes\route.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\server.js
Error: Cannot find module './config/logger'
Require stack:
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\routes\route.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:772:15)
    at Function.Module._load (internal/modules/cjs/loader.js:677:27)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js:7:14)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js:8:5)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
2021-02-01T12:50:19.285Z [logs] error: uncaughtException: Cannot find module './config/logger'
Require stack:
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\routes\route.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\server.js
Error: Cannot find module './config/logger'
Require stack:
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\routes\route.js
- D:\Bigg Boss\Backend\Its-My-Choize-Backend\server.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:772:15)
    at Function.Module._load (internal/modules/cjs/loader.js:677:27)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\config\db_connection.js:7:14)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (D:\Bigg Boss\Backend\Its-My-Choize-Backend\controllers\authentication.js:8:5)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
